fixed logo alignments on services

--- a/css/pages/main_page.css
+++ b/css/pages/main_page.css
@@ -371,11 +371,9 @@
 .partners__list {
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-between;
 }
 
-.partners__item:nth-child(4n + 1) {
-    margin-left: 0;
-}
 
 .partners__link {
     text-decoration: none;
@@ -383,5 +381,8 @@
     min-width: 262px;
     height: 120px;
     align-items: center;
-    justify-content: space-between;
+}
+
+.partners__link--right{
+    justify-content: flex-end;
 }
